--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 
 <body>
-  
+  <nav>
+    <div id="menuToggle">
+      <input type="checkbox"/>
+      <span></span>
+      <span></span>
+      <span></span>
+      <ul id="menu">
+        <center>
+        <li><a href="#">Startseite</a></li>
+        <li><a href="#">Startseite</a></li>
+        <li><a href="#">Startseite</a></li>
+        <li><a href="#">Startseite</a></li>
+        <li><a href="#">Startseite</a></li>
+        <a href="https://www.steinerpascal.ch"><li>Myself</li></a>
+        </center>
+      </ul>
+    </div>
+    </nav>
   <div class="reveal">
     <div class="slides">
       <section id="particles-js">
