--- a/index.html
+++ b/index.html
@@ -15,16 +15,9 @@
       <span></span>
       <span></span>
       <span></span>
-      <ul id="menu">
-        <center>
-        <li><a href="#">Startseite</a></li>
-        <li><a href="#">Startseite</a></li>
-        <li><a href="#">Startseite</a></li>
-        <li><a href="#">Startseite</a></li>
-        <li><a href="#">Startseite</a></li>
-        <a href="https://www.steinerpascal.ch"><li>Myself</li></a>
-        </center>
-      </ul>
+      <div id="menu">
+        
+      </div>
     </div>
     </nav>
   <div class="reveal">
@@ -33,6 +26,18 @@
          <div class="logo-wrapper">
             <img src="public/images/udaan.png" alt="logo" id="logo" />
           </div>  	 
+      </section>
+      <section>
+        <div class="tab">
+        <div class="monument" style="background-image:url(public/images/landmarks/cststation.png);"></div>
+        <div class="content"></div>
+        </div>
+      </section>
+      <section>
+        <div class="tab">
+        <div class="monument"></div>
+        <div class="content"></div>
+        </div>
       </section>
       <section>
         <div class="tab">
@@ -51,6 +56,7 @@
 
 
 <!-- scripts -->
+<script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/reveal.js"></script>
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
