--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" media="screen" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/reveal.css">
+<link rel="stylesheet" href="css/owl.carousel.min.css">
+<link rel="stylesheet" href="css/owl.theme.default.min.css">
 </head>
 
 <body>
@@ -36,10 +38,33 @@
       <section>
         <div class="tab">
         <div class="monument" style="background-image:url(public/images/landmarks/cststation.png);"></div>
-        <div class="content"></div>
+        <div class="content">
+          <h1>Events</h1>
+          <div class="owl-carousel owl-theme">
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+          </div>
+          <div class="owl-carousel owl-theme">
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+          </div>
+          <div class="owl-carousel owl-theme">
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"> Your Content </div>
+          </div>
+        </div>
         </div>
       </section>
-      <section>
+      <section data-background="#0B7365">
         <div class="tab">
         <div class="monument" style="background-image:url(public/images/landmarks/gatewayofindia.png);"></div>
         <div class="content"></div>
@@ -69,6 +94,7 @@
 <!-- stats.js -->
 <script src="js/lib/stats.js"></script>
 <script src="js/vanilla-tilt.js"></script>
+<script src="js/owl.carousel.min.js"></script>
 <script>
         // More info about config & dependencies:
         // - https://github.com/hakimel/reveal.js#configuration
@@ -82,8 +108,6 @@
             width: "100%",
             height: "100%",
             margin: 0,
-            minScale: 1,
-            maxScale: 1,
             transition: 'fade'
         });
   </script>
@@ -101,11 +125,32 @@
 <script type="text/javascript">
   $(document).ready(function(){
     $("#firstLink").mouseover(function(){
-      $("#menu").css('background-color','blue').delay(1000);
+      $("#menu").css('background-color','blue');
     });
     $("#firstLink").mouseout(function(){
       $("#menu").css('background-color','white');
     });
+    $(".owl-carousel").owlCarousel({
+    items:3,
+    loop:true,
+    margin:10,
+    autoplay:true,
+    autoplayTimeout:5000,
+    autoplayHoverPause:true,
+    autoWidth: true,
+    responsiveClass:true,
+    responsive:{
+        0:{
+            items:1,
+        },
+        600:{
+            items:3,
+        },
+        1000:{
+            items:4,
+        }
+    }
+});
   });
 </script>
 </body>
