--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <title>UDAAN 2017</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" media="screen" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/reveal.css">
 <link rel="stylesheet" href="css/owl.carousel.min.css">
 <link rel="stylesheet" href="css/owl.theme.default.min.css">
+<link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     <div class="slides">
       <section id="particles-js">
          <div class="logo-wrapper">
-            <img src="public/images/udaan.png" alt="logo" id="logo" />
+            <img src="public/images/udaan.png" alt="logo" id="udaanlogo" />
           </div>  	 
       </section>
       <section>
@@ -41,30 +41,30 @@
         <div class="content">
           <h1>Events</h1>
           <div class="owl-carousel owl-theme">
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
           </div>
           <div class="owl-carousel owl-theme">
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
           </div>
           <div class="owl-carousel owl-theme">
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
-              <div class="event-poster"> Your Content </div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
+              <div class="event-poster"></div>
           </div>
         </div>
         </div>
       </section>
-      <section data-background="#0B7365">
+      <section>
         <div class="tab">
         <div class="monument" style="background-image:url(public/images/landmarks/gatewayofindia.png);"></div>
         <div class="content"></div>
@@ -79,7 +79,26 @@
       <section>
         <div class="tab">
         <div class="monument" style="background-image:url(public/images/landmarks/sealink.png);"></div>
-        <div class="content"></div>
+        <div class="content">
+            <h3>CONTACT</h3>
+                <div class="section-divide text-align">
+                  <center>
+                    <div style="width: 400px;margin:20px 10px;font-size:12px">
+                        <p class="subheading">ADDRESS</p>
+                        <p>Bharatiya Vidya Bhavans Sardar Patel Institute of Technology, Bhavans Campus, Munshi Nagar, Andheri
+                            (West), Mumbai, Maharashtra 400058</p>
+                        <p class="subheading">PHONE</p>
+                        <p>(91)-(022)-26707440</p>
+                        <p class="subheading">EMAIL</p>
+                        <a href="mailto:matrix@spit.ac.in">matrix@spit.ac.in</a>
+                    </div>
+                  </center>
+                    <div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1012.9718675897255!2d72.83564226591032!3d19.123355949795293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x16268e5d6bca2e6a!2sSardar+Patel+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1503820125526"
+                            width="450" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>
+        </div>
         </div>
       </section>
     </div>
