--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </center>
       </ul>
     </div>
-    </nav>
+  </nav>
   <div class="reveal">
     <div class="slides">
       <section id="particles-js">
          <div class="logo-wrapper">
-            <img src="public/images/udaan2.png" alt="logo" id="udaanlogo" />
+            <img src="public/images/udaan.png" alt="logo" id="udaanlogo" />
           </div>  	 
       </section>
       <section data-background="#5ebed6">
