--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>UDAAN 2018</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="icon" href="">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans" rel="stylesheet">
 	<style type="text/css">
@@ -24,20 +25,22 @@
 			height: auto;
 			width:25%;
 		}
+
 		@media only screen and (max-width: 768px) {
 	    #udaan{
-			top:15%;
-	    left:35%;
-			width:40%;
+			width:45%;
 	    }
 }
+
 @media only screen and (max-width: 425px) {
 		body{
 			padding-top: 15%;
 		}
 	    #udaan{
-	        left:20%;
-			width:60%;
+			width:70%;
+	    }
+	    h1{
+	    	font-size:0.8em;
 	    }
 }
 	</style>
@@ -52,7 +55,7 @@
 	  </a>
 	</h1>
 	</div>
-	<div id="udaan"><img src="images/udaan4.png" style="width:100%;height: auto;"></div>
+	<div><center><img src="images/udaan4.png" id="udaan"></center></div>
 	<div><h1>COMING SOON</h1></div>
 </center>
 </div>
