--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>UDAAN 2018</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="icon" href="">
+	<link rel="icon" href="images/udaanicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans" rel="stylesheet">
 	<style type="text/css">
 		body{
