--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
 	<title>UDAAN 2018</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="images/udaanicon.png">
+	<link rel="icon" type="icon" href="images/udaanicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans" rel="stylesheet">
 	<style type="text/css">
 		body{
 			padding-top: 7%;
-			background-color: #217ae0;
+			background-image: url('images/background.jpg');
+			background-size: cover;
+			background-repeat: no-repeat;
 			font-family: montserrat;
 			width: 100%;
 			height: 100%;
@@ -34,6 +36,7 @@
 
 @media only screen and (max-width: 425px) {
 		body{
+			height: 700px;
 			padding-top: 15%;
 		}
 	    #udaan{
