--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	    }
 }
 	</style>
+
 </head>
 <body>
 	<div id="wrapper">
@@ -121,5 +122,15 @@
         document.body.appendChild(css);
     };
 	</script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112888691-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-112888691-1');
+	</script>
+
 </body>
 </html>
