--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans" rel="stylesheet">
 	<style type="text/css">
 		body{
+			margin:0px;
 			padding-top: 7%;
 			background-image: url('images/background.jpg');
 			background-size: cover;
 			background-repeat: no-repeat;
 			font-family: montserrat;
-			width: 100%;
 			height: 100%;
 			color: white;
 		}
