--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="icon" href="images/udaanicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style type="text/css">
 		body{
 			margin:0px;
-			padding-top: 7%;
+			padding-top: 5%;
 			background-image: url('images/background.jpg');
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -25,12 +26,32 @@
 		}
 		#udaan{
 			height: auto;
-			width:25%;
+			width:20%;
+		}
+		a{
+			color:white;
+		}
+		i{
+			margin: 0px 10px;
+			padding:15px;
+			border-radius: 50%
+		}
+		i:hover{
+			background-color: white;
+			color: black;
+			-ms-transform: translateY(-10px); /* IE 9 */
+		  -webkit-transform: translateY(-10px); /* Safari */
+		  transform: translateY(-10px);
+		  box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+			transition-duration: 0.7s;
+		}
+		.fa-facebook-square, .fa-instagram{
+			font-size: 3em;
 		}
 
 		@media only screen and (max-width: 768px) {
 	    #udaan{
-			width:45%;
+			width:30%;
 	    }
 }
 
@@ -45,6 +66,9 @@
 	    h1{
 	    	font-size:0.8em;
 	    }
+	    h2{
+	    	font-size: 0.8em;
+	    }
 }
 	</style>
 
@@ -54,13 +78,19 @@
 	<center>
 	<div>
 	<h1>
-	  <a href="#" style="text-decoration:none;color:white" class="typewrite" data-period="1000" data-type='[ "Next Station UDAAN","Agla Station UDAAN","Pudhil Station UDAAN"]'>
+	  <a href="#" style="text-decoration:none;color:white;font-family: courier" class="typewrite" data-period="1000" data-type='[ "Next Station UDAAN","Agla Station UDAAN","Pudhil Station UDAAN"]'>
 	    <span class="wrap"></span>
 	  </a>
 	</h1>
 	</div>
 	<div><center><img src="images/udaan4.png" id="udaan"></center></div>
+	<div><h2>Cultural Fest of Sardar Patel Institute of Technology</h2></div>
 	<div><h1>COMING SOON</h1></div>
+	<div><span>
+
+		<a href="https://www.facebook.com/UdaanCultFest/?fref=mentions" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+
+		<a href="https://www.instagram.com/udaan2018/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></span></div>
 </center>
 </div>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
